--- a/index.html
+++ b/index.html
@@ -420,9 +420,9 @@
             document.getElementById('progressFill').style.width = ((currentQuestion + 1) / 30 * 100) + '%';
 
             var optionsContainer = document.getElementById('optionsContainer');
-            optionsContainer.innerHTML = '<button class="option-btn" onclick="selectOption(0)">A. ' + q.a + '（3分）</button>' +
-                '<button class="option-btn" onclick="selectOption(1)">B. ' + q.b + '（2分）</button>' +
-                '<button class="option-btn" onclick="selectOption(2)">C. ' + q.c + '（1分）</button>';
+            optionsContainer.innerHTML = '<button class="option-btn" onclick="selectOption(0)">A. ' + q.a + '</button>' +
+                '<button class="option-btn" onclick="selectOption(1)">B. ' + q.b + '</button>' +
+                '<button class="option-btn" onclick="selectOption(2)">C. ' + q.c + '</button>';
 
             if (answers[currentQuestion] !== undefined) {
                 optionsContainer.children[answers[currentQuestion]].classList.add('selected');
