--- a/index.html
+++ b/index.html
@@ -336,15 +336,7 @@
     <div class="container">
         <div id="welcome" class="screen active">
             <div class="logo">
-                <svg class="logo-icon" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="70" cy="80" r="45" fill="#ff8c42" stroke="#000" stroke-width="8"/>
-                    <circle cx="130" cy="80" r="45" fill="#ff8c42" stroke="#000" stroke-width="8"/>
-                    <text x="70" y="95" font-size="40" text-anchor="middle" fill="#000" font-weight="bold">✱</text>
-                    <text x="130" y="95" font-size="40" text-anchor="middle" fill="#000" font-weight="bold">✱</text>
-                    <ellipse cx="100" cy="130" rx="12" ry="15" fill="#000"/>
-                    <path d="M 60 140 Q 70 155 85 150" stroke="#000" stroke-width="8" fill="none" stroke-linecap="round"/>
-                    <path d="M 140 140 Q 130 155 115 150" stroke="#000" stroke-width="8" fill="none" stroke-linecap="round"/>
-                </svg>
+                <img src="logo.png" class="logo-icon">
             </div>
             <h1>🧠 狗狗智力測驗</h1>
             <p class="subtitle">30 道題目，揭開你家毛孩的天才指數！</p>
