--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <div class="logo">
                 <img src="logo.png" class="logo-icon">
             </div>
-            <h1>🧠 狗狗智力測驗</h1>
+            <h1>狗狗智力測驗</h1>
             <p class="subtitle">30 道題目，揭開你家毛孩的天才指數！</p>
             
             <div class="input-group">
