--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
     <div class="container">
         <div id="welcome" class="screen active">
-            <div class="logo">
+            <div>
                 <img src="logo.png" class="logo-icon">
             </div>
             <h1 id="title">🧠 狗狗智力測驗</h1>
