--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@
 
     <div class="container">
         <div id="welcome" class="screen active">
-            <div>
-                <img src="logo.png" class="logo-icon">
+            <div class="logo">
+                <img src="logo.png" class="logo-icon"> 
             </div>
             <h1 id="title">🧠 狗狗智力測驗</h1>
             <p class="subtitle" id="subtitle">12 道題目，揭開你家毛孩的天才指數！</p>
