--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🧠 狗狗智力測驗</title>
+    <title>狗狗智力測驗</title>
     <style>
         * {
             margin: 0;
@@ -423,7 +423,7 @@
             <div class="logo">
                 <img src="logo.png" class="logo-icon">
             </div>
-            <h1 id="title">🧠 狗狗智力測驗</h1>
+            <h1 id="title">狗狗智力測驗</h1>
             <p class="subtitle" id="subtitle">12 道題目，揭開你家毛孩的天才指數！</p>
             
             <div class="input-group">
