--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                 certTitle: '狗狗智力測驗證明書',
                 certExcellence: '在狗狗智力測驗中表現優異',
                 certScore: '智商得分：',
-                certOrg: '認證機構：@3xs_travel_chewy',
+                certOrg: '製作與設計：@3xs_travel_chewy',
                 certDate: '頒發日期：',
                 progressText: '第 {current} 題，共 12 題'
             },
