--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>狗狗智力測驗</title>
+    <title>🧠 狗狗智力測驗</title>
     <style>
         * {
             margin: 0;
@@ -421,9 +421,19 @@
     <div class="container">
         <div id="welcome" class="screen active">
             <div class="logo">
-                <img src="logo.png" class="logo-icon">
+                <svg class="logo-icon" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="70" cy="85" r="38" fill="#ff8c42"/>
+                    <circle cx="70" cy="85" r="38" fill="none" stroke="#000" stroke-width="10"/>
+                    <circle cx="130" cy="85" r="38" fill="#ff8c42"/>
+                    <circle cx="130" cy="85" r="38" fill="none" stroke="#000" stroke-width="10"/>
+                    <text x="70" y="98" font-size="50" text-anchor="middle" fill="#000" font-weight="bold" font-family="Arial">✱</text>
+                    <text x="130" y="98" font-size="50" text-anchor="middle" fill="#000" font-weight="bold" font-family="Arial">✱</text>
+                    <path d="M 100 130 L 88 148 L 112 148 Z" fill="#000"/>
+                    <path d="M 70 155 Q 80 175 95 170" stroke="#000" stroke-width="12" fill="none" stroke-linecap="round"/>
+                    <path d="M 130 155 Q 120 175 105 170" stroke="#000" stroke-width="12" fill="none" stroke-linecap="round"/>
+                </svg>
             </div>
-            <h1 id="title">狗狗智力測驗</h1>
+            <h1 id="title">🧠 狗狗智力測驗</h1>
             <p class="subtitle" id="subtitle">12 道題目，揭開你家毛孩的天才指數！</p>
             
             <div class="input-group">
@@ -504,7 +514,7 @@
         
         var translations = {
             zh: {
-                title: '🧠 狗狗智力測驗',
+                title: '狗狗智力測驗',
                 subtitle: '12 道題目，揭開你家毛孩的天才指數！',
                 nameLabel: '請輸入你家狗狗的名字：',
                 namePlaceholder: '例如：Chewy、初一',
@@ -525,12 +535,12 @@
                 certTitle: '狗狗智力測驗證明書',
                 certExcellence: '在狗狗智力測驗中表現優異',
                 certScore: '智商得分：',
-                certOrg: '製作與設計：@3xs_travel_chewy',
+                certOrg: '設計與製作：@3xs_travel_chewy',
                 certDate: '頒發日期：',
                 progressText: '第 {current} 題，共 12 題'
             },
             en: {
-                title: '🧠 Dog IQ Test',
+                title: 'Dog IQ Test',
                 subtitle: '12 questions to reveal your dog\'s genius level!',
                 nameLabel: 'Enter your dog\'s name:',
                 namePlaceholder: 'e.g., Chewy, Max',
@@ -551,12 +561,12 @@
                 certTitle: 'Dog Intelligence Test Certificate',
                 certExcellence: 'Demonstrated Excellence in Dog Intelligence Testing',
                 certScore: 'IQ Score: ',
-                certOrg: 'Certified by: @3xs_travel_chewy',
+                certOrg: 'Designed & Created by: @3xs_travel_chewy',
                 certDate: 'Date Issued: ',
                 progressText: 'Question {current} of 12'
             },
             nl: {
-                title: '🧠 Honden IQ Test',
+                title: 'Honden IQ Test',
                 subtitle: '12 vragen om het genieniveau van je hond te onthullen!',
                 nameLabel: 'Voer de naam van je hond in:',
                 namePlaceholder: 'bijv., Chewy, Max',
@@ -577,7 +587,7 @@
                 certTitle: 'Honden Intelligentie Test Certificaat',
                 certExcellence: 'Toonde uitstekende prestaties in honden intelligentie testen',
                 certScore: 'IQ-score: ',
-                certOrg: 'Gecertificeerd door: @3xs_travel_chewy',
+                certOrg: 'Ontworpen & Gemaakt door: @3xs_travel_chewy',
                 certDate: 'Uitgiftedatum: ',
                 progressText: 'Vraag {current} van 12'
             }
