--- a/index.html
+++ b/index.html
@@ -419,9 +419,19 @@
     </div>
 
     <div class="container">
-       <div id="welcome" class="screen active">
+        <div id="welcome" class="screen active">
             <div class="logo">
-                <img src="logo.png" class="logo-icon">
+                <svg class="logo-icon" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="70" cy="85" r="38" fill="#ff8c42"/>
+                    <circle cx="70" cy="85" r="38" fill="none" stroke="#000" stroke-width="10"/>
+                    <circle cx="130" cy="85" r="38" fill="#ff8c42"/>
+                    <circle cx="130" cy="85" r="38" fill="none" stroke="#000" stroke-width="10"/>
+                    <text x="70" y="98" font-size="50" text-anchor="middle" fill="#000" font-weight="bold" font-family="Arial">✱</text>
+                    <text x="130" y="98" font-size="50" text-anchor="middle" fill="#000" font-weight="bold" font-family="Arial">✱</text>
+                    <path d="M 100 130 L 88 148 L 112 148 Z" fill="#000"/>
+                    <path d="M 70 155 Q 80 175 95 170" stroke="#000" stroke-width="12" fill="none" stroke-linecap="round"/>
+                    <path d="M 130 155 Q 120 175 105 170" stroke="#000" stroke-width="12" fill="none" stroke-linecap="round"/>
+                </svg>
             </div>
             <h1 id="title">狗狗智力測驗</h1>
             <p class="subtitle" id="subtitle">12 道題目，揭開你家毛孩的天才指數！</p>
@@ -774,25 +784,25 @@
 
         var levels = {
             zh: [
-                { min: 36, icon: '🌼', title: '小可愛探索家', desc: '對世界充滿好奇但行動派不強，常用「萌樣」解決問題。可能還需要一點時間理解指令，但牠的耐心與親和力絕對滿分。', msgs: ['用無辜大眼證明：可愛就是最強武器！💕', '的人生哲學：為什麼要努力？躺著等摸摸不好嗎？😌'] },
-                { min: 72, icon: '🐕', title: '開朗學習生', desc: '觀察力與反應力不錯，偶爾會分心，但只要願意學就進步很快。懂得用眼神讀空氣，是人類情緒的好感應器。', msgs: ['正在用心感受你的每個情緒變化 💙', '學習速度快，就是偶爾會被零食分心而已 😋'] },
-                { min: 96, icon: '🧠', title: '機靈夥伴型', desc: '思考靈活、能舉一反三，懂得觀察情境並做出對應行動。學新指令速度快，也知道什麼時候該「裝傻」討摸摸。', msgs: ['的測驗結果是 💡 機靈夥伴型！已經學會什麼時候該裝傻了 😏', '在思考怎麼用最少力氣獲得最多零食 🧠✨'] },
-                { min: 108, icon: '🚀', title: '聰明高材生', desc: '不只會學，還會觀察你、測試你。能自己找解法、理解因果，是小小問題解決高手。可能會「太聰明」到讓飼主啞口無言。', msgs: ['已經開始觀察你的行為模式了 🔍', '可能正在測試你的底線在哪裡 🤓'] },
-                { min: 120, icon: '🌟', title: '狗界天才王', desc: '超高理解力與學習速度，懂得觀察人類表情、預測行動。能自己設計遊戲或策略，是真正能「跟人溝通」的狗狗天才！', msgs: ['的智商可能比主人還高…該擔心嗎？👑🤔', '，傳說中的 🌟 狗界天才王！可能已經在策劃統治世界了 🌍'] }
+                { min: 30, icon: '🌼', title: '小可愛探索家', desc: '對世界充滿好奇但行動派不強，常用「萌樣」解決問題。可能還需要一點時間理解指令，但牠的耐心與親和力絕對滿分。', msgs: ['用無辜大眼證明：可愛就是最強武器！💕', '的人生哲學：為什麼要努力？躺著等摸摸不好嗎？😌'] },
+                { min: 71, icon: '🐕', title: '開朗學習生', desc: '觀察力與反應力不錯，偶爾會分心，但只要願意學就進步很快。懂得用眼神讀空氣，是人類情緒的好感應器。', msgs: ['正在用心感受你的每個情緒變化 💙', '學習速度快，就是偶爾會被零食分心而已 😋'] },
+                { min: 86, icon: '🧠', title: '機靈夥伴型', desc: '思考靈活、能舉一反三，懂得觀察情境並做出對應行動。學新指令速度快，也知道什麼時候該「裝傻」討摸摸。', msgs: ['的測驗結果是 💡 機靈夥伴型！已經學會什麼時候該裝傻了 😏', '在思考怎麼用最少力氣獲得最多零食 🧠✨'] },
+                { min: 101, icon: '🚀', title: '聰明高材生', desc: '不只會學，還會觀察你、測試你。能自己找解法、理解因果，是小小問題解決高手。可能會「太聰明」到讓飼主啞口無言。', msgs: ['已經開始觀察你的行為模式了 🔍', '可能正在測試你的底線在哪裡 🤓'] },
+                { min: 111, icon: '🌟', title: '狗界天才王', desc: '超高理解力與學習速度，懂得觀察人類表情、預測行動。能自己設計遊戲或策略，是真正能「跟人溝通」的狗狗天才！', msgs: ['的智商可能比主人還高…該擔心嗎？👑🤔', '，傳說中的 🌟 狗界天才王！可能已經在策劃統治世界了 🌍'] }
             ],
             en: [
-                { min: 36, icon: '🌼', title: 'Adorable Explorer', desc: 'Curious about the world but not the most action-oriented, often solving problems with cuteness. May need some time to understand commands, but their patience and affability are top-notch.', msgs: ['proves that cuteness is the ultimate weapon! 💕', '\'s life philosophy: Why work hard when you can lie down for pets? 😌'] },
-                { min: 72, icon: '🐕', title: 'Cheerful Learner', desc: 'Good observation and reaction skills, occasionally distracted, but progresses quickly when willing to learn. Can read the room with eye contact and is a great sensor of human emotions.', msgs: ['is carefully sensing your every emotional change 💙', ' learns fast, just occasionally distracted by treats 😋'] },
-                { min: 96, icon: '🧠', title: 'Smart Partner', desc: 'Flexible thinking, able to draw inferences, understands situations and responds accordingly. Learns new commands quickly and knows when to "play dumb" for pets.', msgs: ['\'s test result is 💡 Smart Partner! Already learned when to play dumb 😏', ' is thinking about how to get the most treats with minimal effort 🧠✨'] },
-                { min: 108, icon: '🚀', title: 'Brilliant Scholar', desc: 'Not only learns but observes and tests you. Can find solutions independently, understands cause and effect, a master problem solver. Might be "too smart" and leave you speechless.', msgs: [' has started observing your behavior patterns 🔍', ' might be testing where your boundaries are 🤓'] },
-                { min: 120, icon: '🌟', title: 'Canine Genius', desc: 'Exceptional comprehension and learning speed, observes human expressions and predicts actions. Can design games or strategies, truly a dog genius who can "communicate" with humans!', msgs: ['\'s IQ might be higher than their owner\'s... should we worry? 👑🤔', ', the legendary 🌟 Canine Genius! Might already be planning world domination 🌍'] }
+                { min: 30, icon: '🌼', title: 'Adorable Explorer', desc: 'Curious about the world but not the most action-oriented, often solving problems with cuteness. May need some time to understand commands, but their patience and affability are top-notch.', msgs: ['proves that cuteness is the ultimate weapon! 💕', '\'s life philosophy: Why work hard when you can lie down for pets? 😌'] },
+                { min: 71, icon: '🐕', title: 'Cheerful Learner', desc: 'Good observation and reaction skills, occasionally distracted, but progresses quickly when willing to learn. Can read the room with eye contact and is a great sensor of human emotions.', msgs: ['is carefully sensing your every emotional change 💙', ' learns fast, just occasionally distracted by treats 😋'] },
+                { min: 86, icon: '🧠', title: 'Smart Partner', desc: 'Flexible thinking, able to draw inferences, understands situations and responds accordingly. Learns new commands quickly and knows when to "play dumb" for pets.', msgs: ['\'s test result is 💡 Smart Partner! Already learned when to play dumb 😏', ' is thinking about how to get the most treats with minimal effort 🧠✨'] },
+                { min: 101, icon: '🚀', title: 'Brilliant Scholar', desc: 'Not only learns but observes and tests you. Can find solutions independently, understands cause and effect, a master problem solver. Might be "too smart" and leave you speechless.', msgs: [' has started observing your behavior patterns 🔍', ' might be testing where your boundaries are 🤓'] },
+                { min: 111, icon: '🌟', title: 'Canine Genius', desc: 'Exceptional comprehension and learning speed, observes human expressions and predicts actions. Can design games or strategies, truly a dog genius who can "communicate" with humans!', msgs: ['\'s IQ might be higher than their owner\'s... should we worry? 👑🤔', ', the legendary 🌟 Canine Genius! Might already be planning world domination 🌍'] }
             ],
             nl: [
-                { min: 36, icon: '🌼', title: 'Schattige Ontdekker', desc: 'Nieuwsgierig naar de wereld maar niet de meest actiegerichte, lost problemen vaak op met schattigheid. Heeft misschien wat tijd nodig om commando\'s te begrijpen, maar hun geduld en vriendelijkheid zijn topklasse.', msgs: [' bewijst dat schattigheid het ultieme wapen is! 💕', '\'s levensfilosofie: Waarom hard werken als je kunt liggen voor aaitjes? 😌'] },
-                { min: 72, icon: '🐕', title: 'Vrolijke Leerling', desc: 'Goede observatie- en reactievaardigheden, af en toe afgeleid, maar maakt snel vooruitgang wanneer bereid te leren. Kan de stemming lezen met oogcontact en is een geweldige sensor voor menselijke emoties.', msgs: [' voelt zorgvuldig elke emotionele verandering van je 💙', ' leert snel, alleen af en toe afgeleid door traktaties 😋'] },
-                { min: 96, icon: '🧠', title: 'Slimme Partner', desc: 'Flexibel denkvermogen, kan conclusies trekken, begrijpt situaties en reageert dienovereenkomstig. Leert snel nieuwe commando\'s en weet wanneer "dom te doen" voor aaitjes.', msgs: ['\'s testresultaat is 💡 Slimme Partner! Al geleerd wanneer dom te doen 😏', ' denkt na over hoe de meeste traktaties te krijgen met minimale inspanning 🧠✨'] },
-                { min: 108, icon: '🚀', title: 'Briljante Geleerde', desc: 'Niet alleen leert maar observeert en test je. Kan zelfstandig oplossingen vinden, begrijpt oorzaak en gevolg, een meester probleemoplosser. Kan "te slim" zijn en je sprakeloos achterlaten.', msgs: [' is begonnen je gedragspatronen te observeren 🔍', ' test misschien waar je grenzen liggen 🤓'] },
-                { min: 120, icon: '🌟', title: 'Honden Genie', desc: 'Uitzonderlijk begrip en leersnelheid, observeert menselijke uitdrukkingen en voorspelt acties. Kan spellen of strategieën ontwerpen, echt een hondengenie dat met mensen kan "communiceren"!', msgs: ['\'s IQ is misschien hoger dan die van hun eigenaar... moeten we ons zorgen maken? 👑🤔', ', het legendarische 🌟 Honden Genie! Plant misschien al wereldheerschappij 🌍'] }
+                { min: 30, icon: '🌼', title: 'Schattige Ontdekker', desc: 'Nieuwsgierig naar de wereld maar niet de meest actiegerichte, lost problemen vaak op met schattigheid. Heeft misschien wat tijd nodig om commando\'s te begrijpen, maar hun geduld en vriendelijkheid zijn topklasse.', msgs: [' bewijst dat schattigheid het ultieme wapen is! 💕', '\'s levensfilosofie: Waarom hard werken als je kunt liggen voor aaitjes? 😌'] },
+                { min: 71, icon: '🐕', title: 'Vrolijke Leerling', desc: 'Goede observatie- en reactievaardigheden, af en toe afgeleid, maar maakt snel vooruitgang wanneer bereid te leren. Kan de stemming lezen met oogcontact en is een geweldige sensor voor menselijke emoties.', msgs: [' voelt zorgvuldig elke emotionele verandering van je 💙', ' leert snel, alleen af en toe afgeleid door traktaties 😋'] },
+                { min: 86, icon: '🧠', title: 'Slimme Partner', desc: 'Flexibel denkvermogen, kan conclusies trekken, begrijpt situaties en reageert dienovereenkomstig. Leert snel nieuwe commando\'s en weet wanneer "dom te doen" voor aaitjes.', msgs: ['\'s testresultaat is 💡 Slimme Partner! Al geleerd wanneer dom te doen 😏', ' denkt na over hoe de meeste traktaties te krijgen met minimale inspanning 🧠✨'] },
+                { min: 101, icon: '🚀', title: 'Briljante Geleerde', desc: 'Niet alleen leert maar observeert en test je. Kan zelfstandig oplossingen vinden, begrijpt oorzaak en gevolg, een meester probleemoplosser. Kan "te slim" zijn en je sprakeloos achterlaten.', msgs: [' is begonnen je gedragspatronen te observeren 🔍', ' test misschien waar je grenzen liggen 🤓'] },
+                { min: 111, icon: '🌟', title: 'Honden Genie', desc: 'Uitzonderlijk begrip en leersnelheid, observeert menselijke uitdrukkingen en voorspelt acties. Kan spellen of strategieën ontwerpen, echt een hondengenie dat met mensen kan "communiceren"!', msgs: ['\'s IQ is misschien hoger dan die van hun eigenaar... moeten we ons zorgen maken? 👑🤔', ', het legendarische 🌟 Honden Genie! Plant misschien al wereldheerschappij 🌍'] }
             ]
         };
 
